Melekhov dop liquidated

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             "Юнион-метал",
             "ИП Мельник",
             "ИП Мелехов",
-            "Мелехов (доп)",
+            "ИП Мелехов (всп.под.)",
             "ИП Ярох",
             "ИП Тарасов",
             "ИП Толстопятов",
